# terraphim-kg-agents

./: .ci-trigger  BUILD.md  Cargo.toml  README.md
.cargo/: config.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  publish-crates.yml
.terraphim/: adf.toml
crates/terraphim_kg_agents/: Cargo.toml
crates/terraphim_kg_linter/: Cargo.toml
crates/terraphim_kg_linter/src/: lib.rs
