[workspace]
resolver = "2"
members = [
    "crates/terraphim_kg_agents",
    "crates/terraphim_kg_linter",
    "crates/terraphim_codebase_eval",
]

[workspace.package]
version = "1.20.3"
edition = "2024"
authors = ["Terraphim Team <team@terraphim.ai>"]
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://git.terraphim.cloud/terraphim/terraphim-kg-agents"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tempfile = "3.27"
rustls = { version = "0.23", default-features = false }
rustls-webpki = "0.103.12"

[patch.crates-io]
rustls-webpki = { git = "https://github.com/rustls/webpki.git", tag = "v/0.103.12" }

[profile.release]
panic = "unwind"
lto = false
codegen-units = 1
opt-level = 3
